Added new parahraph

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -23,6 +23,7 @@
       a base understanding in code that I can apply to problem solving in the
       future.
     </p>
+    <p>This is a new parahraph</p>
 
     <div class="picture">
       <img
